--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,15 @@
 ﻿node_modules/
-.env
-.env.*
-artifacts/
-cache/
 dist/
 build/
-out/
+artifacts/
+cache/
 coverage/
+.env
+.env.*
+!.env.example
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+.DS_Store
+Thumbs.db
