--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,18 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@zama-fhe/relayer-sdk": "^0.1.2",
-    "buffer": "^6.0.3",
-    "ethers": "^6.15.0",
-    "events": "^3.3.0",
-    "fhevmjs": "^0.6.2",
-    "process": "^0.11.10",
+    "@zama-fhe/relayer-sdk": "^0.2.0",
+    "axios": "^1.12.2",
+    "dotenv": "^17.2.2",
+    "ethers": "^5.8.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "util": "^0.12.5"
+    "web3.storage": "^4.5.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
+    "@nomicfoundation/hardhat-verify": "^3.0.2",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^5.0.0",
