fix start script for relayer

--- a/package.json
+++ b/package.json
@@ -3,34 +3,30 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
+    "start": "node relayer/index.js",
     "clean": "hardhat clean",
     "compile": "hardhat compile",
+    "deploy:sepolia": "hardhat run scripts/deploy.js --network sepolia",
     "test": "hardhat test",
-    "deploy:sepolia": "hardhat run scripts/deploy.js --network sepolia"
+    "start": "node relayer/index.js"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^5.0.0",
-    "fhevm": "^0.6.2"
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "cors": "^2.8.5",
+    "axios": "^1.7.2",
+    "@openzeppelin/contracts": "^5.0.0"
   },
   "devDependencies": {
-    "@fhevm/solidity": "^0.8.0",
-    "@nomicfoundation/hardhat-chai-matchers": "^2.1.0",
-    "@nomicfoundation/hardhat-ethers": "^3.0.5",
-    "@nomicfoundation/hardhat-ignition": "^3.0.3",
-    "@nomicfoundation/hardhat-ignition-ethers": "^3.0.3",
-    "@nomicfoundation/hardhat-network-helpers": "^3.0.0",
-    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
-    "@nomicfoundation/hardhat-verify": "^3.0.2",
-    "@types/chai": "^5.2.2",
-    "@types/mocha": "^10.0.10",
-    "@types/node": "^24.3.3",
-    "dotenv": "^16.4.5",
-    "ethers": "^6.15.0",
+    "@nomicfoundation/hardhat-toolbox": "^3.0.0",
+    "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
+    "@nomicfoundation/hardhat-verify": "^2.0.0",
+    "@nomicfoundation/hardhat-ignition": "^0.15.0",
+    "@nomicfoundation/hardhat-ignition-ethers": "^0.15.0",
     "hardhat": "^2.22.10",
-    "hardhat-gas-reporter": "^2.3.0",
-    "solidity-coverage": "^0.8.16",
+    "ethers": "^6.13.0",
     "ts-node": "^10.9.2",
-    "typechain": "^8.3.2",
-    "typescript": "^5.9.2"
+    "typescript": "^5.3.2"
   }
 }
