--- a/relayer/package.json
+++ b/relayer/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "relayer",
+  "name": "confidential-voting-fhevm",
   "version": "1.0.0",
-  "main": "index.js",
+  "private": true,
   "type": "module",
   "scripts": {
-    "start": "node index.js"
+    "start": "node relayer/index.js"
   },
   "dependencies": {
-    "axios": "^1.6.0",
+    "axios": "^1.7.2",
     "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2"
   }
 }
