--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "node relayer/index.js",
+    "start": "node index.js",
     "clean": "hardhat clean",
     "compile": "hardhat compile",
     "deploy:sepolia": "hardhat run scripts/deploy.js --network sepolia",
