--- a/relayer/package.json
+++ b/relayer/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "confidential-voting-fhevm",
-  "version": "1.0.0",
+  "name": "musicvote-relayer",
+  "version": "0.0.1",
   "private": true,
-  "type": "module",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "axios": "^1.7.2",
+    "axios": "^1.12.2",
     "cors": "^2.8.5",
-    "express": "^4.19.2"
+    "dotenv": "^16.6.1",
+    "express": "^4.21.2"
   }
 }
