--- a/package.json
+++ b/package.json
@@ -1,32 +1,18 @@
 {
-  "name": "confidential-voting-fhevm",
+  "name": "confidential-voting-fhevm-relayer",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "start": "node index.js",
-    "clean": "hardhat clean",
-    "compile": "hardhat compile",
-    "deploy:sepolia": "hardhat run scripts/deploy.js --network sepolia",
-    "test": "hardhat test",
-    "start": "node relayer/index.js"
+    "start": "node index.js"
   },
   "dependencies": {
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "cors": "^2.8.5",
     "axios": "^1.7.2",
-    "@openzeppelin/contracts": "^5.0.0"
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2"
   },
-  "devDependencies": {
-    "@nomicfoundation/hardhat-toolbox": "^3.0.0",
-    "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
-    "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
-    "@nomicfoundation/hardhat-verify": "^2.0.0",
-    "@nomicfoundation/hardhat-ignition": "^0.15.0",
-    "@nomicfoundation/hardhat-ignition-ethers": "^0.15.0",
-    "hardhat": "^2.22.10",
-    "ethers": "^6.13.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.3.2"
+  "engines": {
+    "node": ">=20.0.0"
   }
 }
